--- a/css/main.css
+++ b/css/main.css
@@ -57,9 +57,9 @@ ul {
   list-style: none;
   padding-left: 2ch;
 }
-ul li {
+/* ul li {
   text-indent: -2ch;
-}
+} */
 ul > li::before {
   content: '* ';
   font-weight: bold;
